fix bugs with margins

--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
                   <!------------------ Навігація ---------------->
 
                 <ul class="site-nav list">
-                  <li><a class="links current" href="./">Студія</a></li>
-                  <li><a class="links" href="./portfolio.html">Портфоліо</a></li>
-                  <li><a class="links" href="./">Контакти</a></li>
+                  <li class="items"><a class="links current" href="./">Студія</a></li>
+                  <li class="items"><a class="links" href="./portfolio.html">Портфоліо</a></li>
+                  <li class="items"><a class="links" href="./">Контакти</a></li>
                 </ul>
             </nav>
 
                   <!-- Контакти в капелюсі чомусь окремо від навігаціі -->
 
                 <ul class="list contacts">
-                  <li>
+                  <li  class="items">
                   <a class="header-contact links" href="mailto:info@devstudio.com"
                     >info@devstudio.com</a
                   >
                   </li>
-                  <li>
+                  <li class="items">
                       <a
                         class="header-contact links"
                         href="tel:+380961111111"
