--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
 
-    <!------------ Fonts ----------------->
+    <!-- Fonts -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
   
-    <!---------- Підключення css стилів ------------->
+    <!-- Підключення css стилів -->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
 
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <!------------------ Капелюх ------------------>
+    <!-- Капелюх -->
 
     <header class="header">
 
@@ -39,7 +39,7 @@
                 >Web<span class="logo black">Studio</span></a
                 >
 
-                  <!------------------ Навігація ---------------->
+                  <!-- Навігація -->
 
                 <ul class="site-nav list">
                   <li class="items"><a class="links current" href="./">Студія</a></li>
@@ -69,26 +69,26 @@
 
     <main>
 
-      <!-------------- Герой ---------------->
+      <!-- Герой -->
 
       <section class="hero">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button class="hero-button" type="button">Замовити послугу</button>
       </section>
 
-      <!------------- Переваги ---------------->
+      <!-- Переваги -->
 
       <section class="section benefits">
 
         <div class="container">
 
-            <!------- заголовок секції який буде сховано----- -->
+            <!-- заголовок секції який буде сховано -->
 
         <h2 class="title-benefits">Наші переваги</h2>
 
         <ul class="list benefits">
 
-          <!----- 01 ----->
+          <!-- 01 -->
 
           <li class="benefits-card">
             <h3 class="title-item">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -98,7 +98,7 @@
             </p>
           </li>
 
-          <!----- 02 ------>
+          <!-- 02 -->
 
           <li class="benefits-card">
             <h3 class="title-item">ПУНКТУАЛЬНІСТЬ</h3>
@@ -108,7 +108,7 @@
             </p>
           </li>
 
-          <!----- 03 ----->
+          <!-- 03 -->
 
           <li class="benefits-card">
             <h3 class="title-item">ПЛАНУВАННЯ</h3>
@@ -117,7 +117,7 @@
             </p>
           </li>
 
-          <!------ 04 ------>
+          <!-- 04 -->
 
           <li class="benefits-card">
             <h3 class="title-item">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
@@ -134,7 +134,7 @@
         
       </section>
 
-      <!------------- Чим ми займаємося ---------->
+      <!-- Чим ми займаємося -->
 
       <section class="section what">
        
@@ -155,7 +155,7 @@
 
       </section>
 
-      <!---------- Наша команда -------------->
+      <!-- Наша команда -->
 
       <section class="section team">
 
@@ -208,17 +208,18 @@
       </section>
     </main>
 
-    <!-------------- Футер ----------------->
+    <!-- Футер -->
 
     <footer class="footer">
 
      <div class="container">
-      <!----------- Логотип білий ---------------->
+      <!-- Логотип білий -->
 
       <a class="logo links" href="./index.html"
         >Web<span class="logo white">Studio</span></a
       >
-      <!------------- Адресса -------------->
+      <!-- Адресса -->
+
       <address>
         <ul class="list">
           <li>
