--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
 
-    <!------------ Fonts ----------------->
+    <!-- Fonts -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
   
-    <!---------- Підключення css стилів ------------->
+    <!-- Підключення css стилів -->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
 
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <!------------------ Капелюх ------------------>
+    <!-- Капелюх -->
 
     <header class="header">
 
@@ -39,7 +39,7 @@
                 >Web<span class="logo black">Studio</span></a
                 >
 
-                  <!------------------ Навігація ---------------->
+                  <!-- Навігація -->
 
                 <ul class="site-nav list">
                   <li class="items"><a class="links " href="./">Студія</a></li>
@@ -90,7 +90,7 @@
           </li>
         </ul>
 
-        <!--------- галерея проектів ---------->
+        <!-- галерея проектів -->
 
         <ul class="list project">
           <!-- 01 -->
@@ -209,6 +209,7 @@
             <h3 class="name-project">Growing Business</h3>
             <p class="project">Додаток</p>
           </li>
+
         </ul>
 
         </div>
@@ -216,19 +217,25 @@
       </section>
     </main>
 
-    <!----------- Футер ------------>
+    <!-- Секція Футер -->
 
      <footer class="footer">
 
+      <!-- Контейнер 1200 -->
+
      <div class="container">
-      <!----------- Логотип білий ---------------->
+
+      <!-- Логотип білий -->
 
       <a class="logo links" href="./index.html"
         >Web<span class="logo white">Studio</span></a
       >
-      <!------------- Адресса -------------->
+      <!-- тег Адресса -->
+
       <address>
+        
         <ul class="list">
+
           <li>
             <a
               class="links adrs"
@@ -238,11 +245,13 @@
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
+
           <li>
             <a class="links mail" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
+
           <li>
             <a
               class="links tel"
@@ -250,10 +259,14 @@
                >+38 096 111 11 11</a
             >
           </li>
+
         </ul>
+
       </address>
+
      </div>
 
     </footer>
+
   </body>
 </html>
