--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
                   <!-- Навігація -->
 
                 <ul class="site-nav list">
-                  <li class="items"><a class="links " href="./">Студія</a></li>
+                  <li class="items"><a class="links" href="./">Студія</a></li>
                   <li class="items"><a class="links current" href="./portfolio.html">Портфоліо</a></li>
                   <li class="items"><a class="links" href="./">Контакти</a></li>
                 </ul>
@@ -79,15 +79,27 @@
         <!-- Кнопки вибору категорій -->
 
         <ul class="categories list">
-          <li><button class="categories-but current" type="button">Все</button></li>
+
+          <li>
+            <button class="categories-but current" type="button">Все</button>
+          </li>
+
           <li>
             <button class="categories-but" type="button">Веб-сайти</button>
           </li>
-          <li><button class="categories-but" type="button">Додатки</button></li>
-          <li><button class="categories-but" type="button">Дизайн</button></li>
+
+          <li>
+            <button class="categories-but" type="button">Додатки</button>
+          </li>
+
+          <li>
+            <button class="categories-but" type="button">Дизайн</button>
+          </li>
+
           <li>
             <button class="categories-but" type="button">Маркетинг</button>
           </li>
+
         </ul>
 
         <!-- галерея проектів -->
@@ -102,8 +114,10 @@
                 alt="Ноутбук"
                 width="370"
             /></a>
-            <h3 class="name-project">Технокряк</h3>
-            <p class="project">Веб-сайт</p>
+            <div class="box">
+              <h3 class="name-project">Технокряк</h3>
+              <p class="project">Веб-сайт</p>
+            </div>
           </li>
 
           <!-- 02 -->
@@ -115,8 +129,10 @@
                 alt="Пестер"
                 width="370"
             /></a>
-            <h3 class="name-project">Постер New Orlean vs Golden Star</h3>
-            <p class="project">Дизайн</p>
+            <div class="box">
+              <h3 class="name-project">Постер New Orlean vs Golden Star</h3>
+              <p class="project">Дизайн</p>
+            </div>
           </li>
 
           <!-- 03 -->
@@ -128,8 +144,10 @@
                 alt="Додаток"
                 width="370"
             /></a>
-            <h3 class="name-project">Ресторан Seafood</h3>
-            <p class="project">Додаток</p>
+            <div class="box">
+              <h3 class="name-project">Ресторан Seafood</h3>
+              <p class="project">Додаток</p>
+            </div>
           </li>
 
           <!-- 04 -->
@@ -141,8 +159,10 @@
                 alt="Навушники"
                 width="370"
             /></a>
-            <h3 class="name-project">Проєкт Prime</h3>
-            <p class="project">Маркетинг</p>
+           <div class="box">
+             <h3 class="name-project">Проєкт Prime</h3>
+             <p class="project">Маркетинг</p>
+           </div>
           </li>
 
           <!-- 05 -->
@@ -154,8 +174,10 @@
                 alt="Коробки"
                 width="370"
             /></a>
-            <h3 class="name-project">Проєкт Boxes</h3>
-            <p class="project">Додаток</p>
+            <div class="box">
+              <h3 class="name-project">Проєкт Boxes</h3>
+              <p class="project">Додаток</p>
+            </div>
           </li>
 
           <!-- 06 -->
@@ -167,8 +189,10 @@
                 alt="Монітор"
                 width="370"
             /></a>
-            <h3 class="name-project">Inspiration has no Borders</h3>
-            <p class="project">Веб-сайт</p>
+            <div class="box">
+              <h3 class="name-project">Inspiration has no Borders</h3>
+              <p class="project">Веб-сайт</p>
+            </div>
           </li>
 
           <!-- 07 -->
@@ -180,8 +204,10 @@
                 alt="Журнал"
                 width="370"
             /></a>
-            <h3 class="name-project">Видання Limited Edition</h3>
-            <p class="project">Дизайн</p>
+            <div class="box">
+              <h3 class="name-project">Видання Limited Edition</h3>
+              <p class="project">Дизайн</p>
+            </div>
           </li>
 
           <!-- 08 -->
@@ -193,8 +219,10 @@
                 alt="Цінник"
                 width="370"
             /></a>
-            <h3 class="name-project">Проект LAB</h3>
-            <p class="project">Маркетинг</p>
+           <div class="box">
+             <h3 class="name-project">Проект LAB</h3>
+             <p class="project">Маркетинг</p>
+           </div>
           </li>
 
           <!-- 09 -->
@@ -206,8 +234,10 @@
                 alt="Лептоп"
                 width="370"
             /></a>
-            <h3 class="name-project">Growing Business</h3>
-            <p class="project">Додаток</p>
+            <div>
+              <h3 class="name-project">Growing Business</h3>
+              <p class="project">Додаток</p>
+            </div>
           </li>
 
         </ul>
@@ -233,12 +263,10 @@
       <!-- тег Адресса -->
 
       <address>
-        
-        <ul class="list">
-
-          <li>
-            <a
-              class="links adrs"
+        <ul class="list adrs">
+          
+          <li class="adrs-item">
+            <a class="links adrs"
               href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
               target="_blank"
               rel="noopener noreferrer nofollow"
@@ -246,22 +274,19 @@
             >
           </li>
 
-          <li>
+          <li class="adrs-item">
             <a class="links mail" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
 
-          <li>
-            <a
-              class="links tel"
+          <li class="adrs-item">
+            <a class="links tel"
               href="tel:+380961111111"
                >+38 096 111 11 11</a
             >
           </li>
-
         </ul>
-
       </address>
 
      </div>
