--- a/portfolio.html
+++ b/portfolio.html
@@ -234,7 +234,7 @@
                 alt="Лептоп"
                 width="370"
             /></a>
-            <div>
+            <div class="box">
               <h3 class="name-project">Growing Business</h3>
               <p class="project">Додаток</p>
             </div>
