fixed bugs an add hover

--- a/index.html
+++ b/index.html
@@ -72,8 +72,14 @@
       <!-- Герой -->
 
       <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="hero-button" type="button">Замовити послугу</button>
+
+       <div class="container">
+        
+         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+         <button class="hero-button"  type="button">Замовити послугу</button>
+
+       </div>
+
       </section>
 
       <!-- Переваги -->
@@ -141,11 +147,16 @@
         <div class="container">
 
            <h2 class="title">Чим ми займаємося</h2>
+
         <ul class="list box">
+
           <li class="photo">
             <img src="./images/img-01.jpg" alt="codding process" width="370" />
           </li>
-          <li class="photo"><img src="./images/img-02.jpg" alt="maketing" width="370" /></li>
+
+          <li class="photo"><img src="./images/img-02.jpg" alt="maketing" width="370" />
+          </li>
+
           <li class="photo">
             <img src="./images/img-03.jpg" alt="color matching" width="370" />
           </li>
@@ -243,7 +254,7 @@
 
       <address>
         <ul class="list adrs">
-          
+
           <li class="adrs-item">
             <a class="links adrs"
               href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
