--- a/portfolio.html
+++ b/portfolio.html
@@ -108,136 +108,145 @@
           <!-- 01 -->
 
           <li class="project-card">
-            <a href=""
+            <a class="links" href=""
               ><img
                 src="./images/project-img/img-01.jpg"
                 alt="Ноутбук"
                 width="370"
-            /></a>
-            <div class="box">
-              <h3 class="name-project">Технокряк</h3>
-              <p class="project">Веб-сайт</p>
-            </div>
+              />
+                <div class="box">
+                  <h3 class="name-project">Технокряк</h3>
+                  <p class="project">Веб-сайт</p>
+                </div>
+            </a>
           </li>
 
           <!-- 02 -->
 
           <li class="project-card">
-            <a href=""
+            <a class="links" href=""
               ><img
                 src="./images/project-img/img-02.jpg"
                 alt="Пестер"
                 width="370"
-            /></a>
-            <div class="box">
-              <h3 class="name-project">Постер New Orlean vs Golden Star</h3>
-              <p class="project">Дизайн</p>
-            </div>
+              />
+                <div class="box">
+                  <h3 class="name-project">Постер New Orlean vs Golden Star</h3>
+                  <p class="project">Дизайн</p>
+                </div>
+            </a>
           </li>
 
           <!-- 03 -->
 
           <li class="project-card">
-            <a href=""
+            <a class="links" href=""
               ><img
                 src="./images/project-img/img-03.jpg"
                 alt="Додаток"
                 width="370"
-            /></a>
-            <div class="box">
-              <h3 class="name-project">Ресторан Seafood</h3>
-              <p class="project">Додаток</p>
-            </div>
+              />
+                <div class="box">
+                  <h3 class="name-project">Ресторан Seafood</h3>
+                  <p class="project">Додаток</p>
+                </div>
+            </a>
           </li>
 
           <!-- 04 -->
 
           <li class="project-card">
-            <a href=""
+            <a class="links" href=""
               ><img
                 src="./images/project-img/img-04.jpg"
                 alt="Навушники"
                 width="370"
-            /></a>
-           <div class="box">
-             <h3 class="name-project">Проєкт Prime</h3>
-             <p class="project">Маркетинг</p>
-           </div>
+              />
+              <div class="box">
+                <h3 class="name-project">Проєкт Prime</h3>
+                <p class="project">Маркетинг</p>
+              </div>
+            </a>
           </li>
 
           <!-- 05 -->
 
           <li class="project-card">
-            <a href=""
+            <a class="links" href=""
               ><img
                 src="./images/project-img/img-05.jpg"
                 alt="Коробки"
                 width="370"
-            /></a>
-            <div class="box">
-              <h3 class="name-project">Проєкт Boxes</h3>
-              <p class="project">Додаток</p>
-            </div>
+              />
+                <div class="box">
+                 <h3 class="name-project">Проєкт Boxes</h3>
+                 <p class="project">Додаток</p>
+                </div>
+            </a>
           </li>
 
           <!-- 06 -->
 
           <li class="project-card">
-            <a href=""
+            <a class="links" href=""
               ><img
                 src="./images/project-img/img-06.jpg"
                 alt="Монітор"
                 width="370"
-            /></a>
-            <div class="box">
-              <h3 class="name-project">Inspiration has no Borders</h3>
-              <p class="project">Веб-сайт</p>
-            </div>
+              />
+                <div class="box">
+                 <h3 class="name-project">Inspiration has   no Borders</h3>
+                 <p class="project">Веб-сайт</p>
+                </div>
+            </a>
           </li>
 
           <!-- 07 -->
 
           <li class="project-card">
-            <a href="">
+            <a class="links" href="">
               <img
                 src="./images/project-img/img-07.jpg"
                 alt="Журнал"
                 width="370"
-            /></a>
-            <div class="box">
-              <h3 class="name-project">Видання Limited Edition</h3>
-              <p class="project">Дизайн</p>
-            </div>
+              />
+                <div class="box">
+                 <h3 class="name-project">Видання Limited   Edition</h3>
+                 <p class="project">Дизайн</p>
+                </div>
+            </a>
           </li>
 
           <!-- 08 -->
 
           <li class="project-card">
-            <a href=""
+            <a class="links" href=""
               ><img
                 src="./images/project-img/img-08.jpg"
                 alt="Цінник"
                 width="370"
-            /></a>
-           <div class="box">
-             <h3 class="name-project">Проект LAB</h3>
-             <p class="project">Маркетинг</p>
-           </div>
+              />
+              <div class="box">
+                <h3 class="name-project">Проект LAB</h3>
+                 <p class="project">Маркетинг</p>
+              </div>
+           </a>
           </li>
 
           <!-- 09 -->
 
           <li class="project-card">
-            <a href=""
+            <a class="links" href=""
               ><img
                 src="./images/project-img/img-09.jpg"
                 alt="Лептоп"
                 width="370"
-            /></a>
-            <div class="box">
-              <h3 class="name-project">Growing Business</h3>
-              <p class="project">Додаток</p>
-            </div>
+              />
+              <div class="box">
+                <h3 class="name-project">Growing   Business</h3>
+               <p class="project">Додаток</p>
+              </div>
+            </a>
           </li>
 
         </ul>
